modules/gdscript/tests/scripts/runtime/errors/op_by_zero/modulo_by_zero_vector4i.gd
func test():
	var vec4i = Vector4i(1, 1, 1, 1)
	vec4i %= Vector4i(0, 0, 0, 0)
